echo-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-echo
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: cert-manager-webhook-duckdns-staging
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - devops-demo.duckdns.org
    secretName: devops-demo-tls-secret-staging
  ingressClassName: nginx
  rules:
  - host: devops-demo.duckdns.org
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: echo-svc
            port:
              number: 80

### helm install cert-manager-webhook-duckdns --namespace cert-manager --set duckdns.token='' --set clusterIssuer.production.create=true --set clusterIssuer.staging.create=true --set clusterIssuer.email='' --set logLevel=2 ./deploy/cert-manager-webhook-duckdns
